--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha turma</title>
-    <kinke class="css"></kinke>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="cabecalho"></header>
-    <img src="tancredo-logo.jpg" alt="logo do colégio" class="cabecalho-imagem">
-    <nav class="cabecalho-lista">
-        <a href="" class="cabecalho-lista-link">Escola</a>
-        <a href="" class="cabecalho-lista-link">Estudante</a>
-    </nav>
+    <header class="cabecalho">
+        <img src="tancredo-logo.jpg" alt="logo do colégio" class="cabecalho-imagem">
+        <nav class="cabecalho-lista">
+            <a href="" class="cabecalho-lista-link">Escola</a>
+            <a href="" class="cabecalho-lista-link">Estudante</a>
+        </nav>
+    </header>
+</body>
+</html>
