--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
             <a href="" class="cabecalho-lista-link">Estudante</a>
         </nav>
     </header>
+    <section class="escola">
+       <div class="escola-texto"> 
+        <h2 class="escola-texto-titulo"></h2> 
+        <p class="escola-texto-paragrafo"></p>
+        <p class="escola-texto-paragrafo"></p>
+</div>
+<img src="escola.png"alt"" class="escola-imagem"
 </body>
 </html>
