--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="tancredo-logo.jpg" alt="Logo do colégio tancredo" class="cabecalho-imagem">
+        <img src="./img/tancredo-logo.jpg" alt="Logo do colégio tancredo" class="cabecalho-imagem">
         <nav class="cabecalho-lista">
             <a href="" class="cabecalho-lista-link"> Escola </a>
             <a href="" class="cabecalho-lista-link"> Estudante </a>
@@ -24,7 +24,11 @@
                 Conta com uma estrutura de um prédio de dois andares, quadra coberta, biblioteca, dois laboratórios de informática e um laboratório de ciências
             </p>
        </div>
-       <img src="escola.png" alt="" class="escola-imagem"> 
+       <img src="./img/escola.png" alt="" class="escola-imagem"> 
     </section>
+</section class="estudante">
+    <h2 class="'estudante-titulo">Quem são os estudantes</h2>
+       </div class="estudante-titulo">
+       
 </body>
 </html>
