--- a/José Luiz.html
+++ b/José Luiz.html
@@ -12,19 +12,18 @@
     <header class="cabecalho">
         <img src="./img/tancredo-logo.jpg" alt="Logo do colégio tancredo" class="cabecalho-imagem">
         <nav class="cabecalho-lista">
-            <a href="#" class="cabecalho-lista-link"> Escola </a>
-            <a href="José Luiz.html" class="cabecalho-lista-link"> Estudante </a>
+            <a href="index.html" class="cabecalho-lista-link"> Escola </a>
+            <a href="" class="cabecalho-lista-link"> Estudante </a>
         </nav>
     </header>
     <section class="escola">
         <div class="escola-texto">
-            <h2 class="escola-texto-titulo"> Colégio Estadual Cívico-Militar Tancredo de Almeida Neves</h2>
-            <p class="escola-texto-paragrafo">
-                O colégio Cívico Militar Tancredo de Almeida Neves foi criada em 1982, na cidade de Foz do Iguaçu,
-                Paraná. Hoje em dia a escola oferece Ensino Fundamental II, Novo Ensino Médio, Desenvolvimento de
-                Sistemas e Formação docente .
+            <h2 class="escola-texto-titulo">Sou o estudante José Luiz Garcia de Oliveira</h2>
+            <p class="escola-texto-paragrafo">O colégio Cívico Militar Tancredo de Almeida Neves foi criada em 1983, na cidade de Foz do Iguaçu,
+                Paraná.
+               
             </p>
-            <p class="escola-texto-paragrafo">
+            <p class="escola-texto-paragrafo">Sou estudante, estou no 2ºano de exatas 
                 Conta com uma estrutura de um prédio de dois andares, quadra coberta, biblioteca, dois laboratórios de
                 informática e um laboratório de ciências
             </p>
